--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./server/index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node server/index.js",
-    "start:pm2": "pm2 start server/index.js --name brage-app --env production",
+    "start:pm2": "pm2 start server/index.js --name $APP_NAME --env production",
     "build": "cross-env NODE_ENV=production brage-js",
     "build:check": "npm run sqlcheck && npm run build",
     "dev": "concurrently \"npm run dev:node\" \"npm run dev:brage\"",
