--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "./server/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "start:pm2": "pm2 start server/index.js --name $APP_NAME",
+    "start": "pm2 start ecosystem.config.cjs",
+    "reload": "pm2 reload ecosystem.config.cjs",
     "build": "cross-env NODE_ENV=production brage-js",
     "build:check": "npm run sqlcheck && npm run build",
     "dev": "concurrently \"npm run dev:node\" \"npm run dev:brage\"",
@@ -27,6 +27,7 @@
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
+    "pm2": "^6.0.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
